@@ -1,6 +1,7 @@
 # Offpunk History
 
 ## 0.4 - Unreleased
+- New list command : "list freeze" and "list suscribe"
 - Pictures are now displayed directely in terminal (suggested by kelbot)
 - Introducing the "open" command to open current page/image/file with external handler.
 - "set width XX" will now work everywhere (thanks kelbot for reporting the bug)
